added edit and delete button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,6 +100,7 @@
             <th>Time In Days</th>
             <th>Level of Difficulty</th>
             <th>EntraceFees</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -111,6 +112,10 @@
             <td>{{plan.timeInDays}}</td>
             <td>{{plan.levelofDifficulty}}</td>
             <td>{{plan.entraceFees}}</td>
+            <td>
+              <button class="btn btn-primary mr-1"><i class="fa fa-edit"></i></button>
+              <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+            </td>
           </tr>
         </tbody>
       </table>
