--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,6 +83,11 @@
       </div>
       <div class="col-md-3">
         <div class="form-group">
+          <input class="form-control" formControlName="image" placeholder="Image url">
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="form-group">
           <button class="btn btn-primary btn-block" type="submit" *ngIf="!selectedPlan">Add</button>
           <button class="btn btn-primary btn-block" type="button" *ngIf="selectedPlan" (click)="updatePlan()">Update</button>
         </div>
@@ -112,6 +117,7 @@
         <thead>
           <tr>
             <th>Area</th>
+            <th>Image</th>
             <th>Country</th>
             <th>Why go</th>
             <th>Where to go</th>
@@ -124,6 +130,9 @@
         <tbody>
           <tr *ngFor="let plan of plans; let i = index">
             <td>{{getArea(plan.area)}}</td>
+            <td>
+              <img [src]="plan.image" width="150px">
+            </td>
             <td>{{plan.country}}</td>
             <td>{{plan.whyGo}}</td>
             <td>{{plan.wheretoGo}}</td>
